# testing options

option('lak_enable_tests',
	type: 'boolean',
	value: true,
	yield: true,
)

# windowing options

option('lak_enable_windowing',
	type: 'boolean',
	value: true,
	yield: true,
)

option('sdl2_from_source',
	type: 'boolean',
	value: true,
	yield: true,
)

option('lak_backend',
	type: 'combo',
	choices: [
		'win32',
		'xlib',
		'xcb',
		'sdl',
		'qt',
	],
	value: 'sdl',
	yield: true,
)

option('lak_enable_softrender',
	type: 'boolean',
	value: true,
	yield: true,
)

option('lak_enable_opengl',
	type: 'boolean',
	value: true,
	yield: true,
)

option('lak_enable_vulkan',
	type: 'boolean',
	value: false,
	yield: true,
)

option('lak_enable_metal',
	type: 'boolean',
	value: false,
	yield: true,
)

# lmdb options

option('lak_enable_lmdb',
	type: 'boolean',
	value: false,
	yield: true,
)

# lua options

option('lak_enable_lua',
	type: 'boolean',
	value: true,
	yield: true,
)

# glm options

option('lak_enable_glm',
	type: 'boolean',
	value: true,
	yield: true,
)

# dear imgui options

option('lak_enable_imgui',
	type: 'boolean',
	value: true,
	yield: true,
)

# libgphoto2 options

option('lak_enable_libgphoto2',
	type: 'boolean',
	value: false,
	yield: true,
)

option('libgphoto2_msys_prefix',
	type: 'string',
	value: 'C:/msys64',
	yield: true,
)

# stb options

option('lak_enable_stb',
	type: 'boolean',
	value: true,
	yield: true,
)

option('lak_enable_stb_image',
	type: 'boolean',
	value: true,
	yield: true,
)

option('lak_enable_stb_image_write',
	type: 'boolean',
	value: true,
	yield: true,
)
